--- a/teste 1/index.html
+++ b/teste 1/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de login</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="login.css" media="all">
 </head>
 <body>
     <div class="main">
         <div class="login-right">
             <h1>Faça Login Aqui</h1>
-            <img src="astronaut-suit-animate.svg" alt="">
+            <img src="astronaut-suit-animate.svg" alt="imagemd e astronauta">
         </div>
         <div class="login-left">
             <div class="card-login">
@@ -27,7 +27,9 @@
                 <div class="select">
                     <input type="checkbox" name="chak" id="ichak">
                     <label for="ichak">Lembrar-me</label>
+                    <a href="">Esqueci a senha</a>
                 </div>
+                
                 <button class="btn">Enviar</button>
             </div>
         </div>
